# eCall_script

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflow/: build_ubuntu.yml
.github/workflows/: build_ubuntu.yml  build_windows.yml
eCallData/: eCall.sdx
eCallData/antennaModels/: eCall-L1.csv
eCallData/navigationData/: ecall223_GALILEO.txt  ecall223_GPS.txt  ecall224_GALILEO.txt  ecall224_GPS.txt
eCallData/trajectories/: carEllipse.csv
inc/: CMakeLists.txt  Scenario.h  SerialPort.h  mainwindow.h  mathFormulaJO.h  matplotlibcpp.h  nmea.h  scenario.h  utils.h
script/: CMakeLists.txt  main.cpp  mathFormulaJO.cpp  scenario.cpp  test.cpp
src/: CMakeLists.txt  Scenario.cpp  SerialPort.cpp  main.cpp  mainwindow.cpp  mainwindow.ui  mathFormulaJO.cpp  nmea.cpp  scenario.cpp  utils.cpp
